--- a/public/style/style.less
+++ b/public/style/style.less
@@ -1,11 +1,14 @@
 @import "../components/normalize-css/normalize.css";
 @import url('https://fonts.googleapis.com/css?family=Raleway:300,400,700');
 
-
 //colors
 @font-color: #434A54;
 @primary: #FB5F4B;
 @primary-dark: #E9573F;
+
+//@primary: #2860ab;
+//@primary-dark: darken(@primary, 10%);
+
 @background: #F5F7FA;
 @grey: #CCD1D9;
 
@@ -16,9 +19,12 @@
 @input-height: 38px;
 
 //font-sizes
-@weight-light: 300;
-@weight-medium: 400;
-@weight-bold:700;
+@weight-light: 400;
+@weight-medium: 500;
+@weight-bold: 700;
+
+@success: #A0D468;
+@success-dark: #8CC152;
 
 @base-font: "Raleway", -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", Arial, sans-serif;
 //
@@ -54,7 +60,4 @@
 @import "flash";
 @import "transition";
 @import "misc";
-@import "request";
-
-
-@import "token";
+@import "app";
