pre version updates

--- a/public/style/app.less
+++ b/public/style/app.less
@@ -570,7 +570,7 @@ input[type="submit"] {
 }
 
 section {
-  padding-top: 16px;
+  //padding-top: 16px;
   padding-bottom: 32px;
   //border-bottom: 1px @primary solid;
 }
