--- a/public/style/base.less
+++ b/public/style/base.less
@@ -26,8 +26,7 @@ body {
   -webkit-font-smoothing: antialiased !important;
   text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.004);
   padding-top: @nav-height + 32px;
-  padding-bottom: @nav-height;
-
+  padding-bottom: @nav-height + 32px;
   min-height: 100%;
 }
 
