--- a/views/head.ejs
+++ b/views/head.ejs
@@ -1,12 +1,12 @@
 <% include ./head-no-nav.ejs %>
 
 <nav>
-    <div class="brand">
-        <a href="/" class="block">
-            <img src="/img/logo-white.png">
+    <a href="/" class="brand">
+        <img src="/img/logo-white.png">
+        <div class="name">
             <span>TransPlant</span>
-        </a>
-    </div>
+        </div>
+    </a>
     <div class="pull-right nav-top-right">
 
         <div class="user">
@@ -25,7 +25,7 @@
             <div class="user-menu hidden">
                 <ul>
                     <li>
-                        <a href="/orders">My Orders</a>
+                        <a href="/requests">My Requests</a>
                     </li>
                     <li>
                         <a href="/signout">Sign out</a>
