--- a/views/admin/timeline.ejs
+++ b/views/admin/timeline.ejs
@@ -7,26 +7,22 @@
 <link href="/components/vis/dist/vis-timeline-graph2d.min.css" rel="stylesheet">
 <script src="/components/vis/dist/vis-timeline-graph2d.min.js"></script>
 <script>
-    // DOM element where the Timeline will be attached
-    var container = document.getElementById('visualization');
+    const groupsInput = JSON.parse('<%- JSON.stringify(groups) %>');
+    const itemsInput = JSON.parse('<%- JSON.stringify(items) %>');
 
-    // Create a DataSet (allows two way data-binding)
-    var items = new vis.DataSet([
-        {id: 1, title: 'Hello', content: 'item 1', start: '2014-04-20'},
-        {id: 2, title: 'Hello', content: 'item 2', start: '2014-04-14'},
-        {id: 3, title: 'Hello', content: 'item 3', start: '2014-04-18'},
-        {id: 4, title: 'Hello', content: 'item 4', start: '2014-04-16', end: '2014-04-19'},
-        {id: 5, title: 'Hello', content: 'item 5', start: '2014-04-25'},
-        {id: 6, title: 'Hello', content: 'item 6', start: '2014-04-27', type: 'point'}
-    ]);
+    const groups = new vis.DataSet(groupsInput);
+    const items = new vis.DataSet(itemsInput);
 
-    // Configuration for the Timeline
-    var options = {
-//        height: '256px'
+    const container = document.getElementById('visualization');
+    const options = {
+        groupOrder: 'content' // groupOrder can be a property name or a sorting function
     };
+    const timeline = new vis.Timeline(container);
+    timeline.setOptions(options);
+    timeline.setGroups(groups);
+    timeline.setItems(items);
 
-    // Create a Timeline
-    var timeline = new vis.Timeline(container, items, options);
+    //TODO on move item, move all items to the right in sync
 </script>
 
 <% include ../foot.ejs %>
