--- a/public/style/button.less
+++ b/public/style/button.less
@@ -1,8 +1,4 @@
-.button,
-button,
-input[type="submit"],
-input[type="reset"],
-input[type="button"] {
+.button {
   background-color: #FFF;
   height: @input-height;
   line-height: @input-height;
