--- a/public/style/form.less
+++ b/public/style/form.less
@@ -58,7 +58,7 @@ input[role="combobox"] {
   .transition-border;
 
   &.has-icon {
-    padding-right: 43.75px;
+    padding-left: 38px;
   }
   &.has-button {
     border-bottom-right-radius: 0;
@@ -75,7 +75,7 @@ input[role="combobox"] {
 .input-icon {
   position: absolute;
   top: 0;
-  right: 0;
+  left: 0;
   z-index: 2;
   display: block;
   width: @input-height;
