--- a/public/style/type.less
+++ b/public/style/type.less
@@ -1,17 +1,8 @@
-
-//h1 {
-//
-//}
-
-//h2 {
-//  font-size: 1.1em;
-//}
-
-.big {
+.big, .large {
   font-size: 6rem;
 }
 
-.small {
+.small, .little {
   font-size: 0.8rem;
 }
 
