--- a/views/head.ejs
+++ b/views/head.ejs
@@ -28,6 +28,9 @@
                         <a href="/requests">My Requests</a>
                     </li>
                     <li>
+                        <a href="/timeline">Timeline</a>
+                    </li>
+                    <li>
                         <a href="/signout">Sign out</a>
                     </li>
                 </ul>
