--- a/views/signin.ejs
+++ b/views/signin.ejs
@@ -23,7 +23,7 @@
                                placeholder="Password" required>
                         <span class="icon-lock input-icon"></span>
                     </div>
-                    <button class="wide primary" type="submit">
+                    <button class="button wide primary" type="submit">
                         Sign in
                     </button>
                 </form>
