--- a/views/requests/show.ejs
+++ b/views/requests/show.ejs
@@ -7,6 +7,8 @@
     <p>Approved: <%- request.approved %></p>
     <p>Date: <%- request.date %></p>
     <p>Created At: <%- request.createdAt %></p>
+    <p>Status: <%- request.status %></p>
+
     <ul>
         <% request.constructs.map(function(construct){ %>
         <li>
