--- a/public/style/style.less
+++ b/public/style/style.less
@@ -2,18 +2,22 @@
 @import url('https://fonts.googleapis.com/css?family=Raleway:300,400,700');
 
 //colors
-@font-color: #434A54;
+//@font-color: #434A54;
+@font-color: #5F5F5F;
 @primary: #FB5F4B;
 @primary-dark: #E9573F;
 
 //@primary: #2860ab;
 //@primary-dark: darken(@primary, 10%);
 
+@global-radius: 4px;
+@border-color: #CCD1D9;
+
 @background: #F5F7FA;
 @grey: #CCD1D9;
 
 //variables
-@nav-height: 45px;
+@nav-height: 46px;
 @container-width: 980px;
 @breakpoint: 750px;
 @input-height: 38px;
@@ -60,4 +64,6 @@
 @import "flash";
 @import "transition";
 @import "misc";
+@import "tile";
 @import "app";
+@import "timeline";
