--- a/public/style/type.less
+++ b/public/style/type.less
@@ -1,5 +1,8 @@
 .big, .large {
   font-size: 6rem;
+  @media (max-width: @breakpoint) {
+    font-size: 4rem;
+  }
 }
 
 .small, .little {
@@ -13,6 +16,10 @@
 h1, h2, h3, h4, h5, h6,
 .h1, .h2, .h3, .h4, .h5, .h6 {
   font-weight: @weight-light;
+
+  &:first-of-type { //THIS IS DODGY AS FUCK!
+    margin-top: 0;
+  }
 }
 
 .center {
