--- a/views/head.ejs
+++ b/views/head.ejs
@@ -1,4 +1,4 @@
-<% include ./head-no-nav.ejs %>
+<% include head-no-nav.ejs %>
 
 <nav>
     <a href="/" class="brand">
@@ -38,7 +38,7 @@
 
             <% } else { %>
             <div class="name">
-                <a href="/signin" class="block">Sign in</a>
+                <a href="/signin" class="button">Sign in</a>
             </div>
             <% } %>
         </div>
