--- a/public/style/app.less
+++ b/public/style/app.less
@@ -1,8 +1,3 @@
-//input {
-//  line-height: @input-height !important;
-//  height: @input-height !important;
-//}
-
 .is-searchable.is-focused:not(.is-open) > .Select-control {
   border-color: @primary;
 }
@@ -25,7 +20,6 @@ input[type="submit"] {
 }
 
 .typeahead-selector {
-  //width: 188px;
   .pillow;
   width: 100%;
   display: block;
@@ -336,11 +330,6 @@ input[type="submit"] {
   outline: none;
 }
 
-//.react-select-box-clear:hover:before,
-//.react-select-box-clear:focus:before {
-//background-color: @primary;
-//}
-
 .react-select-box-hidden {
   display: none
 }
@@ -397,9 +386,7 @@ input[type="submit"] {
   border-radius: 4px;
   height: 20px;
   width: 20px;
-  /* margin-right: 31px; */
   border: 1px solid @font-color;
-  //background: #f9f9f9;
   vertical-align: middle;
 }
 
@@ -449,21 +436,18 @@ input[type="submit"] {
   left: -99999em;
 }
 
-///////select
-
 .Select-value-label {
-  //line-height: line-height: inherit;
   float: left;
-  background-color: @primary;
+  background: none;
+
   font-size: initial !important;
   margin: 0 !important;
   padding: 0 !important;
-  color: #FFFFFF !important;
+  color: @font-color !important;
   border-radius: 4px !important;
   font-weight: @weight-bold !important;
   padding-left: 2px !important;
   padding-right: 2px !important;
-  //height: 35px;
 }
 
 .Select--single > .Select-control .Select-value {
@@ -493,6 +477,10 @@ input[type="submit"] {
   font-weight: @weight-bold !important;
 
   border: none !important;
+
+  .Select-value-label {
+    color: #FFFFFF !important;
+  }
 }
 
 .Select--multi .Select-value-icon:hover, .Select--multi .Select-value-icon:focus {
@@ -545,37 +533,6 @@ input[type="submit"] {
   }
 }
 
-//body.tour {
-//form {
-//  * {
-//    @blur-amount: 1px;
-//    -webkit-filter: blur(@blur-amount);
-//    -moz-filter: blur(@blur-amount);
-//    -o-filter: blur(@blur-amount);
-//    -ms-filter: blur(@blur-amount);
-//    filter: blur(@blur-amount);
-//  }
-//}
-//
-//*:hover {
-//  -webkit-filter: blur(0px) !important;
-//  -moz-filter: blur(0px) !important;
-//  -o-filter: blur(0px) !important;
-//  -ms-filter: blur(0px) !important;
-//  filter: blur(0px) !important;
-//}
-
-//
-//#species-select {
-//  * {
-//    -webkit-filter: blur(0px) !important;
-//    -moz-filter: blur(0px) !important;
-//    -o-filter: blur(0px) !important;
-//    -ms-filter: blur(0px) !important;
-//    filter: blur(0px) !important;
-//  }
-//}
-
 .italic {
   font-style: italic;
 }
@@ -592,25 +549,17 @@ section {
 
 .ic-token {
   display: inline-block;
-
   border-radius: 4px;
-
   padding: 4px;
-
   background-color: @primary;
   color: #FFFFFF;
-
   margin-right: 4px;
   margin-bottom: 4px;
-
   .transition-background-color;
-
   font-weight: @weight-bold;
-
   &:hover {
     background-color: @primary-dark;
   }
-
 }
 
 .ic-token-delete-button {
@@ -631,5 +580,5 @@ section {
   padding: 8px;
   position: fixed;
   bottom: 0;
-  right: 10px;
+  right: 18px;
 }
