--- a/public/style/nav.less
+++ b/public/style/nav.less
@@ -19,7 +19,7 @@ nav {
 
   .brand {
     //a {
-      color: #FFF;
+    color: #FFF;
     //}
     .name {
       float: left;
@@ -61,6 +61,11 @@ nav {
         //  filter: grayscale(100%);
 
       }
+    }
+    .button {
+      float: right;
+      margin-top: 4px;
+      margin-bottom: 4px;
     }
     .name {
       float: right;
