--- a/views/admin/timeline.ejs
+++ b/views/admin/timeline.ejs
@@ -4,6 +4,10 @@
     <div id="visualization"></div>
 </div>
 
+
+<link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
+
+
 <link href="/components/vis/dist/vis-timeline-graph2d.min.css" rel="stylesheet">
 <script src="/components/vis/dist/vis-timeline-graph2d.min.js"></script>
 
@@ -20,6 +24,8 @@
 
     const container = document.getElementById('visualization');
     const options = {
+//        showCurrentTime:true,
+        rollingMode: true,
         groupOrder: 'content', // groupOrder can be a property name or a sorting function
         editable: true,
         onAdd: function (item, callback) {
