--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,12 +1,14 @@
 <% include ./head.ejs %>
 
 <div class="container">
-    <img src="/img/logo.png" class="center" width="128px" height="auto">
-    <h1 class="center big" style="margin:0">TransPlant</h1>
-    <p class="center">Welcome to the TSL Plant Transformation service</p>
+    <div style="margin-top:8%;">
+        <img src="/img/logo.png" class="center" width="128px" height="auto">
+        <h1 class="center big" style="margin:0">TransPlant</h1>
+        <p class="center">Welcome to the TSL Plant Transformation service</p>
 
-    <fieldset>
-        <a href="/new" class="button center">New Request</a>
-    </fieldset>
+        <fieldset>
+            <a href="/new" class="button center">New Request</a>
+        </fieldset>
+    </div>
 </div>
 <% include ./foot.ejs %>
