--- a/public/style/button.less
+++ b/public/style/button.less
@@ -28,7 +28,7 @@
     border: 1px solid @primary;
     outline: 0;
     background-color: @primary;
-    color: white;
+    color: #ffffff;
   }
 
   &.wide {
