--- a/public/style/style.less
+++ b/public/style/style.less
@@ -1,9 +1,8 @@
 @import "../components/normalize-css/normalize.css";
-@import url('https://fonts.googleapis.com/css?family=Raleway:300,400,700');
 
 //colors
 //@font-color: #434A54;
-@font-color: #5F5F5F;
+@font-color: #3a3f51;
 @primary: #FB5F4B;
 @primary-dark: #E9573F;
 
@@ -13,7 +12,8 @@
 @global-radius: 4px;
 @border-color: #CCD1D9;
 
-@background: #F5F7FA;
+//@background: #F5F8FF;
+@background: #FCFCFC;
 @grey: #CCD1D9;
 
 //variables
@@ -30,8 +30,7 @@
 @success: #A0D468;
 @success-dark: #8CC152;
 
-@base-font: "Raleway", -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", Arial, sans-serif;
-//
+@base-font: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", Arial, sans-serif; //
 .pillow {
   -webkit-box-shadow: 0 2px 10px 0 rgba(0, 0, 0, 0.1);
   -moz-box-shadow: 0 2px 10px 0 rgba(0, 0, 0, 0.1);
@@ -65,5 +64,6 @@
 @import "transition";
 @import "misc";
 @import "tile";
+@import "table";
 @import "app";
 @import "timeline";
