--- a/public/style/tile.less
+++ b/public/style/tile.less
@@ -1,44 +1,122 @@
+//.tile {
+//  padding: 8px 16px;
+//  border: 1px solid @border-color;
+//  border-radius: @global-radius;
+//  background-color: #ffffff;
+//  color: @font-color;
+//  &:hover {
+//    border-color: #AAB2BD;
+//  }
+//
+//  h1, h2, h3, h4, h5 {
+//    margin: 0;
+//  }
+//
+//  &.denied {
+//    background-color: @primary;
+//    border-color: @primary-dark;
+//    color: #ffffff;
+//    &:hover {
+//      background-color: @primary-dark;
+//      border-color: @primary;
+//    }
+//  }
+//  &.approved {
+//    background-color: #A0D468;
+//    border-color: #8CC152;
+//    &:hover {
+//      background-color: #8CC152;
+//      border-color: #A0D468;
+//    }
+//  }
+//
+//  //&.denied {
+//  //  border-color: #DA4453;
+//  //  &:hover {
+//  //    border-color: #ED5565;
+//  //  }
+//  //}
+//  //
+//  //&.approved {
+//  //  border-color: #A0D468;
+//  //}
+//  .tile-button-bottom {
+//    //height: auto;
+//    width: 100%;
+//    border-radius: 0 0 4px 4px;
+//    padding: 20px;
+//    font-size: 1.2rem;
+//    line-height: 1.2rem;
+//    height: 60px;
+//    margin-bottom: 0;
+//    &.thin {
+//      padding: 8px;
+//    }
+//  }
+//}
+
 .tile {
-  padding: 8px 16px;
-  border: 1px solid @border-color;
-  border-radius: @global-radius;
-  background-color: #ffffff;
+  text-align: center;
+  background-color: #fff;
+  display: block;
+  border-radius: 4px;
+  margin-bottom: 24px;
+  font-weight: 200;
+  //font-size: 3rem;
   color: @font-color;
-  &:hover {
-    border-color: #AAB2BD;
+  border: none;
+  //&:hover {
+  //  background-color: darken(@blue, 2%);
+  //background-color: @blue-light;
+  //}
+
+  &.pad {
+    padding: 8px;
+    margin: 12px;
   }
 
-  h1, h2, h3, h4, h5 {
-    margin: 0;
+  //&.inverted {
+  //  background-color: @background-dark;
+  //  color: white;
+  //}
+
+  .pillow;
+
+  .tile-block {
+    padding: 20px 10px;
+    overflow-wrap: break-word;
+  }
+  .tile-title {
+    margin-bottom: .75rem;
   }
 
-  &.denied {
-    background-color: @primary;
-    border-color: @primary-dark;
-    color: #ffffff;
-    &:hover {
-      background-color: @primary-dark;
-      border-color: @primary;
+  .tile-img-top {
+    border-radius: 4px 4px 0 0;
+    width: 100%;
+    height: 200px;
+
+    object-fit: cover;
+    background-repeat: no-repeat;
+    background-size: contain;
+    background-position: center;
+
+    &.short {
+      height: 120px;
     }
   }
-  &.approved {
-    background-color: #A0D468;
-    border-color: #8CC152;
-    &:hover {
-      background-color: #8CC152;
-      border-color: #A0D468;
+
+  .tile-button-bottom {
+    //height: auto;
+    width: 100%;
+    border-radius: 0 0 4px 4px;
+    padding: 20px;
+    font-size: 1.2rem;
+    line-height: 1.2rem;
+    height: 60px;
+    margin-bottom: 0;
+    &.thin {
+      padding: 8px;
     }
   }
-
-  //&.denied {
-  //  border-color: #DA4453;
-  //  &:hover {
-  //    border-color: #ED5565;
-  //  }
-  //}
-  //
-  //&.approved {
-  //  border-color: #A0D468;
-  //}
 
 }
