--- a/public/style/type.less
+++ b/public/style/type.less
@@ -1,25 +1,92 @@
+//.big, .large {
+//  font-size: 6rem;
+//  @media (max-width: @breakpoint) {
+//    font-size: 4rem;
+//  }
+//}
+//
+//.small, .little {
+//  font-size: 0.8rem;
+//}
+//
+//.italic {
+//  font-style: italic;
+//}
+//
+//h1, h2, h3, h4, h5, h6,
+//.h1, .h2, .h3, .h4, .h5, .h6 {
+//  font-weight: @weight-light;
+//
+//  &:first-of-type { //THIS IS DODGY AS FUCK!
+//    margin-top: 0;
+//  }
+//}
+//
+//.center {
+//  text-align: center;
+//}
+//
+//a {
+//  text-decoration: none;
+//  color: @primary-dark;
+//}
+//
+//.tip {
+//  color: @primary;
+//  font-style: italic;
+//}
+//
+[hidden] {
+  display: none !important;
+}
+
+p {
+  margin-top: 0;
+  margin-bottom: 1rem;
+}
+
 .big, .large {
   font-size: 6rem;
-  @media (max-width: @breakpoint) {
-    font-size: 4rem;
-  }
+  font-weight: 100;
 }
 
-.small, .little {
-  font-size: 0.8rem;
-}
-
-.italic {
-  font-style: italic;
+.bold {
+  font-weight: bold;
 }
 
 h1, h2, h3, h4, h5, h6,
 .h1, .h2, .h3, .h4, .h5, .h6 {
-  font-weight: @weight-light;
+  margin-bottom: 1rem;
+  //font-family: @header-font;
+  font-family: inherit;
+  font-weight: 300;
+  line-height: 1.1;
+  color: inherit;
+  margin-top: 0;
+}
 
-  &:first-of-type { //THIS IS DODGY AS FUCK!
-    margin-top: 0;
-  }
+h1, .h1 {
+  font-size: 2.5rem;
+}
+
+h2, .h2 {
+  font-size: 2rem;
+}
+
+h3, .h3 {
+  font-size: 1.75rem;
+}
+
+h4, .h4 {
+  font-size: 1.5rem;
+}
+
+h5, .h5 {
+  font-size: 1.25rem;
+}
+
+h6, .h6 {
+  font-size: 1rem;
 }
 
 .center {
@@ -28,11 +95,20 @@ h1, h2, h3, h4, h5, h6,
 
 a {
   text-decoration: none;
-  color: @primary-dark;
+  color: #2b669c;
 }
 
-.tip {
-  color: @primary;
-  font-style: italic;
+.small, .little {
+  font-size: 0.8rem;
 }
 
+.trans_black {
+  color: rgba(0, 0, 0, 0.4);
+}
+//
+//.disabled {
+//  color: @danger;
+//  a {
+//    color: @danger;
+//  }
+//}
