--- a/views/admin/timeline.ejs
+++ b/views/admin/timeline.ejs
@@ -5,13 +5,11 @@
 <!--</div>-->
 
 
-<link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
-
-
+<link href="http://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet" >
 <link href="/components/vis/dist/vis-timeline-graph2d.min.css" rel="stylesheet">
-<script src="/components/vis/dist/vis-timeline-graph2d.min.js"></script>
-
 <link href="/components/sweetalert/dist/sweetalert.css" rel="stylesheet">
+
+<script src="/components/vis/dist/vis-timeline-graph2d.min.js"></script>
 <script src="/components/sweetalert/dist/sweetalert.min.js"></script>
 
 <script>
@@ -31,8 +29,9 @@
         multiselect: true,
         groupEditable:true,
 //        multiselectPerGroup: true
+
+
 //        onAdd: function (item, callback) {
-//
 //            prettyPrompt('Add item', 'Enter text content for new item:', item.content, function (value) {
 //                if (value) {
 //                    item.content = value;
@@ -115,16 +114,6 @@
 //        }
     };
 
-    const timeline = new vis.Timeline(container);
-    timeline.setOptions(options);
-    timeline.setGroups(groups);
-    timeline.setItems(items);
-
-    timeline.on('select', function (properties) {
-        console.log(properties);
-    });
-
-    console.log(timeline);
 
     function prettyConfirm(title, text, callback) {
         swal({
@@ -153,6 +142,18 @@
 //            type: 'error',
 //        }, callback);
     }
+
+
+    const timeline = new vis.Timeline(container);
+    timeline.setOptions(options);
+    timeline.setGroups(groups);
+    timeline.setItems(items);
+
+    timeline.on('select', function (properties) {
+        console.log(properties);
+    });
+
+    console.log(timeline);
 
     //TODO on move item, move all items to the right in sync
 </script>
