--- a/public/style/tile.less
+++ b/public/style/tile.less
@@ -85,6 +85,8 @@
   .tile-block {
     padding: 20px 10px;
     overflow-wrap: break-word;
+
+    border-radius: 4px 4px 0 0;
   }
   .tile-title {
     margin-bottom: .75rem;
