--- a/views/requests/new.ejs
+++ b/views/requests/new.ejs
@@ -4,8 +4,8 @@
     <div id="app"></div>
 </div>
 
-<% if(typeof adminInfo != 'undefined'){ %>
-<script>window.adminInfo = <%- JSON.stringify(adminInfo) %>;</script>
+<% if(typeof group != 'undefined'){ %>
+<script>window.group = <%- JSON.stringify(group) %>;</script>
 <% } %>
 
 <script src="/js/app.js"></script>
